--- a/.github/workflows/Portal.yml
+++ b/.github/workflows/Portal.yml
@@ -3,7 +3,7 @@ name: Update RSS feed every hour
 on:
   schedule:
     - cron: '0 * * * *'  # 毎時0分に実行（UTC）
-  workflow_dispatch:      # 手動でも実行可能
+  workflow_dispatch:      # 手動実行も可能
 
 jobs:
   build:
@@ -23,10 +23,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-      - run: pip install -r requirements.txt
+          pip install -r requirements.txt
+          playwright install chromium  # ← Playwrightブラウザをインストール
 
-      - name: Run RSS.py
-        run: python RSS.py  # ← ファイル名が正確であることを確認
+      - name: Run RSS Generator
+        run: python RSS.py  # ← ファイル名を適宜変更
 
       - name: Commit and push changes
         run: |
